--- a/voting/package.json
+++ b/voting/package.json
@@ -22,6 +22,7 @@
     "bootstrap-icons": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
